--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
-    background: red;
+    background: darkcyan;
     margin: 0;
     padding: 0;
-    font-family: Arial;
+    font-family: Impact,;
     display: grid;
     align-content: center;
     text-align: center; 
