--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,12 @@ header {
     margin: 0;
 }
 
-/* NAV */
+/* SITE NAV */
 nav ul {
     display: flex;
-    justify content: flex-end;
+    justify-content: flex-end;
     margin: 0;
-    padding-top: 6.em;
+    padding-top: .6em;
 }
 
 nav li {
@@ -52,7 +52,11 @@ nav a {
     display: block;
     padding: 1em;
 }
-
+/* MAIN */
+main {
+    padding: 0 0 3em 0;
+    min-height: 80vh;
+}
 /* FOOTER */
 footer {
     border-top: 1px solid #ddd;
@@ -63,7 +67,37 @@ footer nav ul {
     justify-content: center;
 }
 
+/* HERO */
+.hero {
+    display: grid;
+    align-content: center;
+    text-align: center;
+    background: darkred;
+    min-height: 50vh;
+    color: gray;
+}
 
+.hero h2 {
+    font-size: 3em;
+    text-transform: uppercase;
+    margin: 0 auto;
+}
 
+.hero p {
+    margin: 1em auto;
+}
 
+/* Lists */
+.lists {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 1em;
+}
 
+@media (max-width:767px) {
+    .lists {
+        grid-template-columns: 1fr 1fr;
+    }
+}
