--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,21 @@ footer nav ul {
     min-height: 30vh;
     background: #888; 
 }
+
+/* BLOG Archives */
+
+.blog-archives {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.blog-entry {
+    border: 1px solid #ddd;
+    padding: 2em;
+    margin: 2em 0;
+}
+
+.date {
+    opacity: .5;
+    font-size: .8em;
+}
