--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,13 @@ footer nav ul {
     background-size: cover;
 }
 
+.page-blog .hero {
+    background-image: url('../images/darksky.png');
+    background-position: center right;
+    background-size: cover;
+}
+
+
 /* Lists */
 .lists {
     max-width: 1000px;
